Fix: resolve select arrow visibility issues

--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -170,20 +170,16 @@
     -moz-appearance: none;
     padding-right: 50px;
     cursor: pointer;
-    background-image: url("data:image/svg+xml,%3Csvg width='18' height='11' viewBox='0 0 18 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9 10.4143L0.292889 1.7072C-0.0976351 1.31667 -0.0976348 0.683507 0.292889 0.292983C0.683414 -0.0975417 1.31658 -0.097542 1.7071 0.292983L9 7.58588L16.2929 0.292983C16.6834 -0.097542 17.3166 -0.0975417 17.7071 0.292983C18.0976 0.683507 18.0976 1.31667 17.7071 1.7072L9 10.4143Z' fill='%231B1F2B'/%3E%3C/svg%3E");
-    background-repeat: no-repeat;
-    background-position: right 22px center;
-    background-size: 18px 11px;
+    background: url("data:image/svg+xml,%3Csvg width='18' height='11' viewBox='0 0 18 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9 10.4143L0.292889 1.7072C-0.0976351 1.31667 -0.0976348 0.683507 0.292889 0.292983C0.683414 -0.0975417 1.31658 -0.097542 1.7071 0.292983L9 7.58588L16.2929 0.292983C16.6834 -0.097542 17.3166 -0.0975417 17.7071 0.292983C18.0976 0.683507 18.0976 1.31667 17.7071 1.7072L9 10.4143Z' fill='%231B1F2B'/%3E%3C/svg%3E") no-repeat right 22px center / 18px 11px $beige-100;
     
     @include hover-desktop {
-        background-image: url("data:image/svg+xml,%3Csvg width='18' height='11' viewBox='0 0 18 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9 10.4143L0.292889 1.7072C-0.0976351 1.31667 -0.0976348 0.683507 0.292889 0.292983C0.683414 -0.0975417 1.31658 -0.097542 1.7071 0.292983L9 7.58588L16.2929 0.292983C16.6834 -0.097542 17.3166 -0.0975417 17.7071 0.292983C18.0976 0.683507 18.0976 1.31667 17.7071 1.7072L9 10.4143Z' fill='%231B1F2B'/%3E%3C/svg%3E");
+        background: url("data:image/svg+xml,%3Csvg width='18' height='11' viewBox='0 0 18 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9 10.4143L0.292889 1.7072C-0.0976351 1.31667 -0.0976348 0.683507 0.292889 0.292983C0.683414 -0.0975417 1.31658 -0.097542 1.7071 0.292983L9 7.58588L16.2929 0.292983C16.6834 -0.097542 17.3166 -0.0975417 17.7071 0.292983C18.0976 0.683507 18.0976 1.31667 17.7071 1.7072L9 10.4143Z' fill='%231B1F2B'/%3E%3C/svg%3E") no-repeat right 22px center / 18px 11px $beige-200;
     }
     &:focus,
     &:active {
-        background-image: url("data:image/svg+xml,%3Csvg width='18' height='11' viewBox='0 0 18 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9 10.4143L0.292889 1.7072C-0.0976351 1.31667 -0.0976348 0.683507 0.292889 0.292983C0.683414 -0.0975417 1.31658 -0.097542 1.7071 0.292983L9 7.58588L16.2929 0.292983C16.6834 -0.097542 17.3166 -0.0975417 17.7071 0.292983C18.0976 0.683507 18.0976 1.31667 17.7071 1.7072L9 10.4143Z' fill='%231B1F2B'/%3E%3C/svg%3E");
-        background-repeat: no-repeat;
-        background-position: right 22px center;
-        background-size: 18px 11px;
+        background: url("data:image/svg+xml,%3Csvg width='18' height='11' viewBox='0 0 18 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9 10.4143L0.292889 1.7072C-0.0976351 1.31667 -0.0976348 0.683507 0.292889 0.292983C0.683414 -0.0975417 1.31658 -0.097542 1.7071 0.292983L9 7.58588L16.2929 0.292983C16.6834 -0.097542 17.3166 -0.0975417 17.7071 0.292983C18.0976 0.683507 18.0976 1.31667 17.7071 1.7072L9 10.4143Z' fill='%231B1F2B'/%3E%3C/svg%3E") no-repeat right 22px center / 18px 11px $beige-200;
+        border-color: $gray-300;
+        outline: none;
     }
     
     option {
@@ -195,12 +191,9 @@
     }
     @media (max-width: 768px) {
         background-position: right 12px center;
-        @include hover-desktop {
-            background-position: right 12px center;
-        }
         &:focus,
         &:active {
-            background-position: right 12px center;
+            background: url("data:image/svg+xml,%3Csvg width='18' height='11' viewBox='0 0 18 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9 10.4143L0.292889 1.7072C-0.0976351 1.31667 -0.0976348 0.683507 0.292889 0.292983C0.683414 -0.0975417 1.31658 -0.097542 1.7071 0.292983L9 7.58588L16.2929 0.292983C16.6834 -0.097542 17.3166 -0.0975417 17.7071 0.292983C18.0976 0.683507 18.0976 1.31667 17.7071 1.7072L9 10.4143Z' fill='%231B1F2B'/%3E%3C/svg%3E") no-repeat right 12px center / 18px 11px $beige-200;
         }
     }
 }
